добавление проверок и исправления